objects/OF_BillingElement__c.object
<CustomObject>
    <fields>
        <fullName>OF_Attivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Billing_Element_Code__c</fullName>
        <label>Billing Element Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CatalogoCommerciale__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; OF_CommercialElement__r.OF_Servizio__r.OF_CatalogoCommerciale__c, OF_CommercialElement__r.OF_Servizio__r.OF_CatalogoCommerciale__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Catalogo commerciale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CommercialElement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Commercial element</label>
        <referenceTo>OF_CommercialElement__c</referenceTo>
        <relationshipLabel>Billing elements</relationshipLabel>
        <relationshipName>BillingElements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_DataFineValidita__c</fullName>
        <label>Data fine validità</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_DataInizioValidita__c</fullName>
        <label>Data inizio validità</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_Servizio__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; OF_CommercialElement__r.OF_Servizio__c, OF_CommercialElement__r.OF_Servizio__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Servizio</label>
        <type>Text</type>
    </fields>
    <label>Billing element</label>
    <nameField>
        <label>Billing element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>OF_DataFineValidita</fullName>
        <active>true</active>
        <errorConditionFormula>OR(OF_DataFineValidita__c &lt; OF_CommercialElement__r.OF_DataInizioValidita__c, OF_DataFineValidita__c &gt; OF_CommercialElement__r.OF_DataFineValidita__c )</errorConditionFormula>
        <errorMessage>La data di fine validità non è compresa tra le date di validità del Commercial Element</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_DataInizioValidita</fullName>
        <active>true</active>
        <errorConditionFormula>OR(OF_DataInizioValidita__c &lt; OF_CommercialElement__r.OF_DataInizioValidita__c, OF_DataInizioValidita__c &gt; OF_CommercialElement__r.OF_DataFineValidita__c )</errorConditionFormula>
        <errorMessage>La data di inizio validità non è compresa tra le date di validità del Commercial Element</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_ValiditaDataBillingElement</fullName>
        <active>true</active>
        <errorConditionFormula>OF_DataFineValidita__c &lt; OF_DataInizioValidita__c</errorConditionFormula>
        <errorMessage>La data di fine validità non può essere minore della data di inizio validità</errorMessage>
    </validationRules>
</CustomObject>